fixup stuff